; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb3/extr_sge.c_reclaim_completed_tx_imm.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/cxgb3/extr_sge.c_reclaim_completed_tx_imm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sge_txq = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sge_txq*)* @reclaim_completed_tx_imm to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reclaim_completed_tx_imm(%struct.sge_txq* %0) #0 {
  %2 = alloca %struct.sge_txq*, align 8
  %3 = alloca i32, align 4
  store %struct.sge_txq* %0, %struct.sge_txq** %2, align 8
  %4 = load %struct.sge_txq*, %struct.sge_txq** %2, align 8
  %5 = getelementptr inbounds %struct.sge_txq, %struct.sge_txq* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  %7 = load %struct.sge_txq*, %struct.sge_txq** %2, align 8
  %8 = getelementptr inbounds %struct.sge_txq, %struct.sge_txq* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = sub i32 %6, %9
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load %struct.sge_txq*, %struct.sge_txq** %2, align 8
  %13 = getelementptr inbounds %struct.sge_txq, %struct.sge_txq* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = sub i32 %14, %11
  store i32 %15, i32* %13, align 4
  %16 = load i32, i32* %3, align 4
  %17 = load %struct.sge_txq*, %struct.sge_txq** %2, align 8
  %18 = getelementptr inbounds %struct.sge_txq, %struct.sge_txq* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = add i32 %19, %16
  store i32 %20, i32* %18, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
